Refactor static Main.jda references to DiscordStatics, also add .env.example